// Vitest Snapshot v1

exports[`TabBar > TabBar badgePropsVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
  role="tablist"
>
  
  
  <div
    aria-label="TabBar"
    aria-selected="true"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-is-checked"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: 0px; top: 5px;"
          >
            16
          </div>
          
          
          <svg
            class="t-icon t-icon-app"
          >
            <use
              href="#t-icon-app"
            />
          </svg>
          
          
        </div>
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
            style="right: 0px; top: 5px;"
          >
            
          </div>
          
          
          <svg
            class="t-icon t-icon-app"
          >
            <use
              href="#t-icon-app"
            />
          </svg>
          
          
        </div>
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: 0px; top: 5px;"
          >
            New
          </div>
          
          
          <svg
            class="t-icon t-icon-app"
          >
            <use
              href="#t-icon-app"
            />
          </svg>
          
          
        </div>
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: 0px; top: 5px;"
          >
            ···
          </div>
          
          
          <svg
            class="t-icon t-icon-app"
          >
            <use
              href="#t-icon-app"
            />
          </svg>
          
          
        </div>
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar baseVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
  role="tablist"
>
  
  
  <div
    aria-label="TabBar"
    aria-selected="true"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-is-checked"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        文字 
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-da85bda4=""
>
  <h1
    class="title"
    data-v-da85bda4=""
  >
    TabBar 标签栏
  </h1>
  <p
    class="summary"
    data-v-da85bda4=""
  >
    移动端的主导航，用做功能模块之间的切换
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          aria-label="TabBar"
          aria-selected="true"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-is-checked"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带徽章标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          aria-label="TabBar"
          aria-selected="true"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-is-checked"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
                  style="right: 0px; top: 5px;"
                >
                  16
                </div>
                
                
                <svg
                  class="t-icon t-icon-app"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
                
              </div>
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
                  style="right: 0px; top: 5px;"
                >
                  
                </div>
                
                
                <svg
                  class="t-icon t-icon-app"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
                
              </div>
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
                  style="right: 0px; top: 5px;"
                >
                  New
                </div>
                
                
                <svg
                  class="t-icon t-icon-app"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
                
              </div>
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
                  style="right: 0px; top: 5px;"
                >
                  ···
                </div>
                
                
                <svg
                  class="t-icon t-icon-app"
                >
                  <use
                    href="#t-icon-app"
                  />
                </svg>
                
                
              </div>
            </div>
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              文字 
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        纯文本标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          aria-label="TabBar"
          aria-selected="true"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-is-checked t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              标签栏一
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              标签栏二
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              标签栏三
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              标签栏四
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        纯图标标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          aria-label="TabBar"
          aria-selected="true"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-is-checked"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
            <!--v-if-->
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
            <!--v-if-->
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
            <!--v-if-->
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item t-no-border"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content"
          >
            <div
              class="t-tab-bar-item__icon"
            >
              
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
            <!--v-if-->
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        双层级纯文本标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              标签栏一
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-label="TabBar"
          aria-selected="false"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              标签栏二
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        <div
          aria-haspopup="true"
          aria-label="TabBar"
          aria-selected="true"
          class="t-tab-bar-item"
          role="tab"
        >
          <div
            class="t-tab-bar-item__content t-is-checked t-tab-bar-item--onlytext"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <div
                class="t-tab-bar-item__icon-menu"
              />
              
              此处展开
              
            </div>
          </div>
          <transition-stub
            appear="false"
            css="true"
            name="spread"
            persisted="false"
          >
            <!--v-if-->
          </transition-stub>
        </div>
        
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`TabBar > TabBar pureIconVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
  role="tablist"
>
  
  
  <div
    aria-label="TabBar"
    aria-selected="true"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-is-checked"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <!--v-if-->
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <!--v-if-->
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <!--v-if-->
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item t-no-border"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content"
    >
      <div
        class="t-tab-bar-item__icon"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <!--v-if-->
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar textSpreadVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
  role="tablist"
>
  
  
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        标签栏一
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        标签栏二
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-haspopup="true"
    aria-label="TabBar"
    aria-selected="true"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-is-checked t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <div
          class="t-tab-bar-item__icon-menu"
        />
        
        此处展开
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar textVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed"
  role="tablist"
>
  
  
  <div
    aria-label="TabBar"
    aria-selected="true"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-is-checked t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        标签栏一
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        标签栏二
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        标签栏三
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  <div
    aria-label="TabBar"
    aria-selected="false"
    class="t-tab-bar-item"
    role="tab"
  >
    <div
      class="t-tab-bar-item__content t-tab-bar-item--onlytext"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        标签栏四
        
      </div>
    </div>
    <transition-stub
      appear="false"
      css="true"
      name="spread"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </div>
  
  
</div>
`;
